--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "biblatex-csl-converter": "^1.6.7",
     "bibtex-parse-js": "0.0.24",
+    "citation-js": "^0.4.0-11",
     "fs": "0.0.1-security",
     "util": "^0.11.1"
   },
